--- a/main.html
+++ b/main.html
@@ -12,6 +12,11 @@
 <body>
    <h1>ONYX</h1> 
 
-   <button id="grabbable">You can grab my ID.</button>
+   <div id="special"></div>
+   <div class="hay"></div>
+   <div class="hay"></div>
+   <div class="hay"></div>
+
+   <button id="grabbable">Click me to count!</button>
 </body>
 </html>
