--- a/main.html
+++ b/main.html
@@ -17,6 +17,10 @@
    <div class="hay"></div>
    <div class="hay"></div>
 
+   <form>
+   <input type="textarea" id="textinputarea">What!</input>
+   </form>
+
    <button id="grabbable">Click me to count!</button>
 </body>
 </html>
