batch functions and head management

--- a/main.html
+++ b/main.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Onyx">
     <title>Document</title>
     <script type="module">
         import Onyx from "/out.wasm.js"
@@ -10,17 +11,9 @@
     </script>
 </head>
 <body>
-   <h1>ONYX</h1> 
+   <h1 class="test">ONYX</h1> 
 
-   <div id="special"></div>
-   <div class="hay"></div>
-   <div class="hay"></div>
-   <div class="hay"></div>
-
-   <form>
-   <input type="textarea" id="textinputarea">What!</input>
-   </form>
-
-   <button id="grabbable">Click me to count!</button>
+   <h1 id="grabbable" class="specific">What will I say?</button>
+   <h1 class="test">WHAT</h1>
 </body>
 </html>
