--- a/main.html
+++ b/main.html
@@ -11,9 +11,6 @@
     </script>
 </head>
 <body>
-   <h1 class="test">ONYX</h1> 
-
-   <h1 id="grabbable" class="specific">What will I say?</button>
-   <h1 class="test">WHAT</h1>
+   <h1 id="counter"></h1> 
 </body>
 </html>
